# i3d2025-voxel-transform-dag

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
renderer/: CMakeLists.txt  LICENSE.txt  README.md
renderer/src/: FastNoise.cpp  FastNoise.h  array.h  array2d.h  binary_reader.h  binary_writer.h  blur.cu  blur.h  color_utils.h  constexpr_for.h  cuda_error_check.h  cuda_helpers.h  cuda_helpers_cpp.cu  cuda_helpers_cpp.h  cuda_math.h  cuda_random.h  dag_tracer.cu  dag_tracer.h  depth_image.cpp  depth_image.h  engine.cpp  engine.h  events.cpp  events.h  free_image_wrapper.cpp  free_image_wrapper.h  godbolt.cpp  image.cpp  image.h  is_of_type.h  main.cpp  memory.cu  memory.h  move_only.h  my_math.h  my_units.h  my_units_fmt.h  opengl_interop.h  opengl_texture.cpp  opengl_texture.h  (+27 more)
renderer/src/configuration/: gpu_hash_dag_definitions.h  hash_dag_enum.h  profile_definitions.h  script_definitions.h  transform_dag_definitions.h
renderer/src/dags/: base_dag.h  dag_utils.h
renderer/src/dags/basic_dag/: basic_dag.cpp  basic_dag.h
renderer/src/dags/hash_dag/: hash_dag.h  hash_dag_colors.h  hash_dag_editors.h  hash_dag_edits.h  hash_table.cpp  hash_table.h
renderer/src/dags/my_gpu_dags/: create_edit_svo.cu  create_edit_svo.h  my_gpu_base_dag.h  my_gpu_dag_editors.h  my_gpu_dag_item.h  slab_alloc.h  slab_alloc_wrapper.h
renderer/src/dags/my_gpu_dags/cub/: cub_merge_sort.cu  cub_merge_sort.h  cub_radix_sort.cu  cub_radix_sort.h  cub_scan.cu  cub_scan.h  cub_select.cu  cub_select.h
renderer/src/dags/my_gpu_dags/my_gpu_hash_dag/: my_gpu_hash_dag.cu  my_gpu_hash_dag.h  my_gpu_hash_dag_edits.cu  my_gpu_hash_dag_edits.h  my_gpu_hash_dag_factory.cpp  my_gpu_hash_dag_factory.h  my_gpu_hash_dag_threaded_factory.cpp
renderer/src/dags/my_gpu_dags/my_gpu_hash_dag/hash_tables/: acceleration_hash_table.cu  acceleration_hash_table.h  atomic64_hash_table.cu  atomic64_hash_table.h  compact_acceleration_hash_table.cu  compact_acceleration_hash_table.h  duplicate_detection_hash_table.cu  duplicate_detection_hash_table.h  dynamic_slab_alloc.cu  dynamic_slab_alloc.h  gpu_hash_table_base.cu  gpu_hash_table_base.h  individual_chaining_hash_table.h  ticket_board_hash_table.cu  ticket_board_hash_table.h
renderer/src/dags/symmetry_aware_dag/: symmetry_aware_dag.cpp  symmetry_aware_dag.h
renderer/src/dags/transform_dag/: transform_dag.cpp  transform_dag.cu  transform_dag.h
renderer/src/gmath/: Vector3.h
tools/: CMakeLists.txt  README.md
tools/lib/: CMakeLists.txt
tools/lib/include/voxcom/attributes/: attributes.h  color.h
tools/lib/include/voxcom/core/: bounds.h  cuckoo_hash_table.h  image.h  mesh.h  radix_sort.h
tools/lib/include/voxcom/format/: fmt_filesystem.h  fmt_glm.h
tools/lib/include/voxcom/utility/: arg_sort.h  binary_reader.h  binary_writer.h  bitstream.h  disable_all_warnings.h  error_handling.h  fmt_glm.h  hash.h  is_of_type.h  maths.h  my_cuda.h  simd.h  size_of.h  template_magic.h
tools/lib/include/voxcom/voxel/: _atomic_encoded_octree.h  _dag.h  attributes.h  export_hashdag.h  export_import_structure.h  export_ssvdag.h  large_sub_grid.h  morton.h  ssvdag.h  structure.h  transform_dag.h  voxel_grid.h  voxelize.h
tools/lib/src/core/: bounds.cpp  image.cpp  mesh.cpp
tools/lib/src/utility/: bitstream.cpp
tools/lib/src/voxel/: all_hierarchical_transforms.cpp  atomic_encoded_octree.cpp  encoded_octree.cpp  export_hashdag.cpp  export_import_structure.cpp  export_ssvdag.cpp  find_translation.cpp  find_translation.cu  ssvdag.cpp  transform_dag.cpp  transform_dag_hierarchical.cpp  voxelize.cpp
tools/lib/tests/: CMakeLists.txt
tools/lib/tests/src/: test_main.cpp
tools/lib/tests/src/attributes/: attribute_compression.cpp  attributes.cpp
tools/lib/tests/src/core/: cuckoo_hash_table.cpp  image.cpp  radix_sort.cpp
tools/lib/tests/src/utility/: bitstream.cpp  simd.cpp
tools/lib/tests/src/voxel/: _atomic_encoded_octree.cpp  _dag.cpp  _encoded_dag.cpp  _encoded_octree.cpp  save_structure.cpp  structure.cpp  voxel_grid.cpp
tools/ssvdag_fix_comparison/: CMakeLists.txt
tools/ssvdag_fix_comparison/src/: main.cpp
tools/svdag_encoding/: CMakeLists.txt
tools/svdag_encoding/src/: huffman.cpp  huffman.h  main.cpp  no_transform_dag_encoding.cpp  pch.h  pointer_encoding.h  ssvdag_encoding.cpp  svdag32_encoding.cpp  svdag32_encoding.h  svo32_encoding.cpp  svo32_encoding.h  transform_dag_encoding.cpp  transform_dag_encoding.h
tools/transform_subset_comparison/: CMakeLists.txt
tools/transform_subset_comparison/src/: main.cpp
tools/voxelizer/: CMakeLists.txt  import_unity_lightmap.py
tools/voxelizer/src/: main.cpp  octree_to_mesh.cpp  octree_to_mesh.h
vcpkg-registry/ports/tracy/: fix-concurrent-queue.patch  portfile.cmake
vcpkg-registry/versions/: baseline.json
vcpkg-registry/versions/t-/: tracy.json
